--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "3333:3333"
     environment:
-      - RAQUETTE_HOST=raquettekvs
+      - RAQUETTE_HOST=raquette-redis:6379
       - TENNIS_HOST=tennis-redis:6379
     # networks:
     #   - tennis-network
@@ -26,7 +26,7 @@ services:
   
   # raquette-redis:
   #   image: redis
-  #   hostname: raquettekvs
+  #   hostname: raquette-redis
   #   volumes:
   #     - raquette-data:/data
 
