--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,17 @@ services:
   - docker
 
 env:
-  - IMAGE_COMMIT=poudreauxyeux/rapiquette:$TRAVIS_COMMIT
-  - IMAGE_LATEST=poudreauxyeux/rapiquette:latest
+  - IMAGE_COMMIT_TAG=poudreauxyeux/rapiquette:$TRAVIS_COMMIT
+  - IMAGE_LATEST_TAG=poudreauxyeux/rapiquette:latest
 
 before_install:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
 
 script:
-  - docker build -t $IMAGE_COMMIT -t $IMAGE_LATEST .
+  - echo $IMAGE_COMMIT_TAG
+  - echo $IMAGE_LATEST_TAG
+  - docker build -t $IMAGE_COMMIT_TAG -t $IMAGE_LATEST_TAG .
 
 after_success:
-  - docker push $IMAGE_COMMIT
-  - docker push $IMAGE_LATEST
+  - docker push $IMAGE_COMMIT_TAG
+  - docker push $IMAGE_LATEST_TAG
