--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,9 @@ services:
   - docker
 
 env:
-  - IMAGE_COMMIT_TAG="poudreauxyeux/rapiquette:$TRAVIS_COMMIT"
-  - IMAGE_LATEST_TAG="poudreauxyeux/rapiquette:latest"
+  - IMAGE_COMMIT_TAG="poudreauxyeux/rapiquette:$TRAVIS_COMMIT" IMAGE_LATEST_TAG="poudreauxyeux/rapiquette:latest"
 
 before_install:
-  - echo $IMAGE_COMMIT_TAG
-  - echo $IMAGE_LATEST_TAG
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
 
 script:
